xserver-xorg-input-joystick (1:1.5.0-3) UNRELEASED; urgency=low

  * Install 10-joystick.conf.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Fri, 26 Mar 2010 10:58:22 +0200

xserver-xorg-input-joystick (1:1.5.0-2) unstable; urgency=low

  [ Timo Aaltonen ]
  * Install a udev rules file to autoload the driver.
  * Run udevadm trigger on postinst, and depend on udev [linux-any].
  * Add xserver-xorg-input-joystick-dev for the header and .pc files.

  [ Julien Cristau ]
  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
    good reason.  Thanks, Colin Watson!

  [ Robert Hooker ]
  * Correct xserver-xorg-input-joystick-dev package name.
  * Build xserver-xorg-input-joystick-dev on arch: all.
  * Fix udev rules install.

 -- Brice Goglin <bgoglin@debian.org>  Mon, 22 Feb 2010 19:41:10 +0100

xserver-xorg-input-joystick (1:1.5.0-1) experimental; urgency=low

  [ Timo Aaltonen ]
  * New upstream release.
  * Bump Standards-Version to 3.8.3.
  * Build against Xserver 1.7.

  [ Julien Cristau ]
  * Build-depend on libusbhid-dev on kfreebsd.

  [ Cyril Brulebois ]
  * Upload to experimental.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 05 Dec 2009 22:56:05 +0100

xserver-xorg-input-joystick (1:1.4.1-1) unstable; urgency=low

  * New upstream release.

 -- Brice Goglin <bgoglin@debian.org>  Wed, 15 Apr 2009 13:16:37 +0200

xserver-xorg-input-joystick (1:1.4.0-1) unstable; urgency=low

  * Run autoreconf on build.
  * Allow parallel builds.
  * New upstream release.
  * Build against xserver 1.6.
  * Use Vcs-* instead of XS-Vcs-*.

 -- Julien Cristau <jcristau@debian.org>  Thu, 09 Apr 2009 16:12:48 +0100

xserver-xorg-input-joystick (1:1.3.2-1) unstable; urgency=low

  * New upstream release.
  * Run dpkg-shlibdeps with --warnings=6.  Drivers reference symbols from
    /usr/bin/Xorg and other modules, and that's not a bug, so we want
    dpkg-shlibdeps to shut up about symbols it can't find.
    + Build-depend on dpkg-dev >= 1.14.17.
