@@ -1,8 +1,0 @@
-ACTION!="add|change", GOTO="xorg_joystick_end"
-KERNEL!="event*", GOTO="xorg_joystick_end"
-
-ENV{ID_INPUT_JOYSTICK}!="1", GOTO="xorg_joystick_end"
-
-ENV{x11_driver}="joystick"
-
-LABEL="xorg_joystick_end"
