@@ -78,8 +78,6 @@ binary-arch: build install serverabi
 	dh_installdocs
 	dh_installchangelogs ChangeLog
 	dh_install --sourcedir=debian/tmp --list-missing --exclude=joystick_drv.la --exclude=usr/share/man/man4
-	install -d debian/xserver-xorg-input-joystick/lib/udev/rules.d
-	install -m 644 debian/local/66-xorg-joystick.rules debian/xserver-xorg-input-joystick/lib/udev/rules.d
 	install -d debian/xserver-xorg-input-joystick/usr/lib/X11/xorg.conf.d
 	install -m 644 debian/local/10-joystick.conf debian/xserver-xorg-input-joystick/usr/lib/X11/xorg.conf.d
 	dh_installman
