@@ -1,23 +1,0 @@
-#!/bin/sh
-
-set -e
-
-THIS_PACKAGE=xserver-xorg-input-joystick
-THIS_SCRIPT=postinst
-
-#INCLUDE_SHELL_LIB#
-
-case "$1" in
-  configure)
-  if dpkg --compare-versions "$2" lt "1:1.5.0-2"; then
-    if [ `uname -s` = "Linux" ]; then
-      udevadm trigger --subsystem-match=input --action=change
-    fi
-  fi
-esac
-
-#DEBHELPER#
-
-exit 0
-
-# vim:set ai et sw=2 ts=2 tw=80:
