@@ -1,6 +1,7 @@
 xserver-xorg-input-joystick (1:1.5.0-3) UNRELEASED; urgency=low
 
   * Install 10-joystick.conf.
+  * Don't install the udev rule anymore.
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Fri, 26 Mar 2010 10:58:22 +0200
 
